--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,9 @@ body {
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
 }
+.heavy-font {
+    font-weight: 400;
+}
 
 .section {
     padding-top: 2em;
