--- a/css/custom.css
+++ b/css/custom.css
@@ -52,7 +52,6 @@ body {
     box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.25);
 }
 
-
 /* Theming Stuff */
 .themable {
     /* http://stackoverflow.com/questions/7302824/animating-addclass-removeclass-with-jquery */
@@ -66,6 +65,23 @@ body {
     color: #DDD;
     background-color: #424242;
 }
+
+#theme-switch {
+    position: fixed;
+    top: 1em;
+    right: 1em;
+
+    width: 3em;
+    height: 3em;
+    border-radius: 1.5em;
+    background-image: url('../images/yinyang.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#theme-switch.dark-theme {
+    transform: rotate(180deg);
+}
+
 
 img.responsive {
     display: block;
