--- a/css/custom.css
+++ b/css/custom.css
@@ -25,8 +25,8 @@ body {
 }
 
 .section {
-    padding-top: 2em;
-    padding-bottom: 2em;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .section.large-font {
@@ -36,6 +36,8 @@ body {
 .section.hero {
     padding-top: 4em;
     padding-bottom: 4em;
+    margin-top: 0;
+    margin-bottom: 0;
 
     background-image: url("../images/clouds2.jpg");
     background-size: cover;
@@ -47,8 +49,8 @@ body {
 }
 
 .section.devlog {
-    padding-top: 0;
-    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.25);
 }
 
@@ -113,6 +115,8 @@ img.em10 {
     font-weight: bold;
     font-style: italic;
     text-transform: uppercase;
+
+    text-align: center;
 }
 #hero-ticker li {
     list-style-type: none;
@@ -120,6 +124,8 @@ img.em10 {
     font-size: 2em;
     font-family: 'Play', sans-serif;
     font-style: italic;
+
+    text-align: center;
 }
 #hero-ticker > ul {
     width: 100%;
