--- a/css/custom.css
+++ b/css/custom.css
@@ -17,6 +17,9 @@
 /*===========================*/
 
 body {
+    color: #424242;
+    background-color: white;
+
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
 }
