--- a/css/Slidey.css
+++ b/css/Slidey.css
@@ -16,10 +16,7 @@
     z-index: 100;
 
     width: 16rem;
-    /*  Height more than 100% meeded because at 100%,
-        Chrome on Android doesn't render full height
-        when hiding the address bar */
-    height: 150%;
+    height: 100%;
     overflow-y: hidden;
 
     transition: transform 0.3s ease;
@@ -46,10 +43,10 @@
     position: fixed;
     display: block;
     z-index: 100;
-    top: 1rem;
+    top: 0.75rem;
 
-    width: 2rem;
-    height: 2rem;
+    width: 32px;
+    height: 31px;
 
     transform: translateX(0);
     transition: transform 0.3s ease, background 0.3s ease;
@@ -65,20 +62,21 @@
 
 /* Hidden state styling for left and right variants */
 .slidey.slidey--left ~ .slidey__toggle {
-    left: 1rem;
+    left: 0.75rem;
 }
 .slidey.slidey--right ~ .slidey__toggle {
-    right: 1rem;
+    right: 0.75rem;
 }
 
 .slidey__toggle__lines {
-    position: relative;
+    position: absolute;
     display: inline-block;
 
-    width: 1.6rem;
-    height: 0.2rem;
+    width: 26px;
+    height: 3px;
 
-    left: 0.2rem;
+    top: 14px;
+    left: 3px;
     background-color: white;
 
     border-radius: 3px;
@@ -90,21 +88,21 @@
     position: absolute;
     display: inline-block;
 
-    width: 1.6rem;
-    height: 0.2rem;
+    width: 100%;
+    height: 100%;
 
     background-color: white;
 
-    border-radius: 4px;
+    border-radius: 3px;
     transition: transform 0.3s ease, top 0.3s ease;
 
     transform-origin: 50% 50%;
 }
 .slidey__toggle__lines::before {
-    top: -0.5rem;
+    top: -7px;
 }
 .slidey__toggle__lines::after {
-    top: 0.5rem;
+    top: 7px;
 }
 
 /* Open state styling for left and right variants */
@@ -136,10 +134,7 @@
     z-index: 99;
 
     width: 100%;
-    /*  Height more than 100% meeded because at 100%,
-        Chrome on Android doesn't render full height
-        when hiding the address bar */
-    height: 150%;
+    height: 100%;
 
     background-color: black;
     opacity: 0;
